--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,21 @@
   color: #404040;
 }
 
+*::-webkit-scrollbar-track {
+  background-color: rgb(241 245 249);
+  border-radius: 5px;
+}
+
+html,
+body {
+  height: 100vh;
+  overflow: hidden;
+}
+
+#root {
+  height: 100%;
+}
+
 .split-background {
   background: rgb(255, 255, 255);
   background: linear-gradient(
