--- a/src/index.css
+++ b/src/index.css
@@ -15,20 +15,21 @@
 html,
 body {
   height: 100vh;
-  overflow: hidden;
 }
 
 #root {
   height: 100%;
 }
 
-.split-background {
-  background: rgb(255, 255, 255);
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 0%,
-    rgba(255, 255, 255, 1) 50%,
-    rgba(64, 64, 64, 0.08) 50%,
-    rgba(64, 64, 64, 0.08) 100%
-  );
+@media screen and (min-width: 1280px) {
+  .split-background {
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 1) 0%,
+      rgba(255, 255, 255, 1) 50%,
+      rgba(64, 64, 64, 0.08) 50%,
+      rgba(64, 64, 64, 0.08) 100%
+    );
+  }
 }
